--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,12 +7,36 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-row>
+      <ion-col width-10><ion-icon name="home" (click)="onClickHome()"></ion-icon></ion-col>
+      <ion-col><ion-title>User Login</ion-title></ion-col>
+    </ion-row>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <section *ngIf=" loginData ">
+    <div warning>
+      You are login as "{{ loginData.email }}" already !
+      <button ion-button (click)="onClickLogout()">LOGOUT</button>
+    </div>
+  </section>
+  <section *ngIf=" ! loginData ">
+    <ion-list>
+      <ion-item>
+        <ion-label floating>Input Email</ion-label>
+        <ion-input [(ngModel)]="data.email"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Input Password</ion-label>
+        <ion-input [(ngModel)]="data.password"></ion-input>
+      </ion-item>
+      <button ion-button (click)="onClickLogin()">LOGIN</button>
+      <button ion-button (click)="onClickRegister()">REGISTER</button>
+    </ion-list>
+  </section>
 
 </ion-content>
